--- a/index.Html
+++ b/index.Html
@@ -16,7 +16,7 @@
             <div id="btn-nav-menu" class="show"></div>
             <nav id="nav-menu">
                 <ul>
-                    <li class="nav-1"><a href="Enzo Moret.html">Accueil</a></li>
+                    <li class="nav-1"><a href="index.Html">Accueil</a></li>
                     <li class="nav-2"><a href="about.html">About</a></li>
                     <li class="nav-3"><a href="parcours.html">Mon parcours</a></li>
                     <li class="nav-4"><a href="stages.html">Mes stages</a></li>
