change third bloc's text

--- a/index.Html
+++ b/index.Html
@@ -33,8 +33,8 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h2>Bienvenue sur mon Portfolio</h2>
-                <p>Ici vous sera présenté mon parcours, mes stages ainsi que quelques informations sur moi.</p>
+                <h2 class="fs-18">Bienvenue sur mon Portfolio</h2>
+                <p class="fs-p">Ici vous sera présenté mon parcours, mes stages ainsi que quelques informations sur moi.</p>
             </div>
         </section>
     </main>
