--- a/parcours.html
+++ b/parcours.html
@@ -49,8 +49,8 @@
 
                 </div>
                 <div class="content bloc3">
-                    <h3>Mes années de lycée</h3>
-                    <p>J'ai fait mes années de lycéen au lycée Pablo Picasso de Perpignan, après une seconde générale, j'ai pu me dirigé vers une première spécialité informatique, pour par la suite passer mon Bac STI2D en 2022.</p>
+                    <h3>Mes études supérieures</h3>
+                    <p>Suite à l'obtention de mon Bac STI2D, je voulais me spécialiser en développement web, c'est pourquoi je me suis dirigé vers le BTS SIO spécialité SLAM du lycée Jean Lurçat de Perpignan où j'effectue actuellement ma seconde année.</p>
                 </div>    
             </div>
         </section>
