--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
                 <div class="bloc">
                     <h3>Mes Hobbies ?</h3>
-                    <p>J'adore faire du sport tels que de la musculation, la boxe, le MMA, et le rugby. Je suis un passionné du Japon, je lis beaucoup de mangas et je commence à apprendre le japoanise et l'italien.</p>
+                    <p>J'adore faire du sport tels que de la musculation, la boxe, le MMA, et le rugby. Je suis un passionné du Japon, je lis beaucoup de mangas et je commence à apprendre le japonais et l'italien.</p>
                 </div>
                 <!-- Fin des blocs -->
             </div>             
