change some informations

--- a/stages.html
+++ b/stages.html
@@ -30,12 +30,13 @@
         <section class="hero">
             <div class="container">
                 <div class="content">
-                    <h2>Que dire sur mon parcours ?</h2>
+                    <h2>Quels sont les stages que j'ai effectué ?</h2>
                 </div>
                 <div class="content">  
                     <div class="bloc">
-                        <h3>Mes années de collège</h3>
-                        <p>J'ai été pendant 5 ans au collège pierre moreto de Thuir donc sur les période de 2014 à 2019 où j'ai pu obtenir mon Brevet avec la mention Assez bien.</p>
+                        <h3>Stage de première année</h3>
+                        <p>Durant une période de 5 semaine allant de 05 Juin 2023 au 05 Juillet 2023, j'ai effectué mon premier stage à la FNAC de Perpignan, où j'ai pu effectuer diverces tâches comme du renseignement client, de la mise en place de services ou encore vérification de sécurité des appareils du magasin. </p>
+                        <img src="style/Fnac.png" alt="logo">
                     </div>
     
                     <div class="bloc">
