change bloc content

--- a/stages.html
+++ b/stages.html
@@ -35,9 +35,11 @@
                 <div class="content">  
                     <div class="bloc">
                         <h3>Stage de première année</h3>
-                        <p>Durant une période de 5 semaine allant de 05 Juin 2023 au 05 Juillet 2023, j'ai effectué mon premier stage à la FNAC de Perpignan, où j'ai pu effectuer diverces tâches comme du renseignement client, de la mise en place de services ou encore vérification de sécurité des appareils du magasin. </p>
+                        <p>Durant une période de 5 semaines allant du 05 Juin 2023 au 05 Juillet 2023, j'ai effectué mon premier stage à la FNAC de Perpignan, où j'ai pu effectuer diverses tâches comme du renseignement client, de la mise en place de services ou encore la vérification de la sécurité des appareils du magasin.</p>
                         <img src="style/Fnac.png" alt="logo">
                     </div>
+                </div>
+                
     
                     <div class="bloc">
                         <h3>Mes années de lycée</h3>
