--- a/stages.html
+++ b/stages.html
@@ -47,11 +47,11 @@
 
                 </div>
                 <div class="content bloc3">
-                    <h3>Mon site raport de stage</h3>
+                    <h3>Mon site rapport de stage</h3>
                     <p>Pour mieux pouvoir présenter mes stages, j'ai fait un rapport de stage sous forme de site avec WordPress.</p>
-                    <a href="https://site1115.wordpress.com">Mon raport de stage</a>
+                    <a href="https://site1115.wordpress.com" style="color: rgb(255, 255, 255);">Mon rapport de stage</a>
                 </div>
-
+                
                 <div class="content bloc4">
                     <h3>Mes compétences vues et acquises durant mes stages</h3>                    
                 </div>
