--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="container">
-            <div class="reveal">Mon compétences</div>
+            <div class="reveal">Mes compétences</div>
             <div class="bg-nav"></div>
             <div id="btn-nav-menu" class="show"></div>
             <nav id="nav-menu">
@@ -31,9 +31,43 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h2>Mes compétences</h2>
-                <p>Quelles sont mes compétences ?</p>
+                <div class="content">  
+                    <div class="bloc">
+                        <h3>Languages<h3>
+                        <ul>
+                            <li class="competence"><span>Compétence 1:</span> HTML</li>
+                            <li class="competence"><span>Compétence 2:</span> CSS</li>
+                            <li class="competence"><span>Compétence 3:</span> JavaScript</li>
+                            <li class="competence"><span>Compétence 4:</span> PHP</li>
+                            <li class="competence"><span>Compétence 5:</span> Python</li>
+                        </ul>
+                    </div>
+    
+                    <div class="bloc">
+                        <h3>Outils</h3>
+                        <ul>
+                            <li class="competence"><span>Compétence 1:</span> Git</li>
+                            <li class="competence"><span>Compétence 2:</span> MySQL</li>
+                            <li class="competence"><span>Compétence 3:</span> WordPress</li>
+                        </ul>
+                    </div>
+                    <div class="bloc">
+                        <h3>Projets</h3>
+                        <ul>
+                            <li class="competence"><span>Projet 1:</span> Giron-sama</li>
+                            <li class="competence"><span>Projet 2:</span> Gestion de Tournoi</li>
+                            <li class="competence"><span>Projet 3:</span> Space Invaders</li>
+                            <li class="competence"><span>Projet 4:</span> Wii U</li>
+                            <li class="competence"><span>Projet 5:</span> Portfolio</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="content bloc4">
+                    <h3>Mon CV</h3>  
+                    <iframe src="Enzo Moret.pdf" height="550" width="500"></iframe>                 
+                </div>
             </div>
+
         </section>
     </main>
 
