--- a/stages.html
+++ b/stages.html
@@ -54,7 +54,8 @@
                 
                 
                 <div class="content bloc4">
-                    <h3>Mes compétences vues et acquises durant mes stages</h3>                    
+                    <h3>Mes compétences vues et acquises durant mes stages</h3>  
+                    <iframe src="Tableau E4 de  MORET  Enzo (1).pdf" height="600" width="800"></iframe>                 
                 </div>
         </section>
     </main>
